trying to integrate chart.js into application -> issue with cards overlapping

--- a/sourcecode/my-app/src/components/Navbar/SideNavbar.css
+++ b/sourcecode/my-app/src/components/Navbar/SideNavbar.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 1rem 1rem;
     background-color: #fff;
+    margin: 8px;
     box-shadow: 0 2px 8px rgba(0,0,0,0.04);
     position: sticky;
     top: 0;
